kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: wanderlust
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: redis
          image: docker-proxy-test.wakeb.tech/redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: mongo-storage
              mountPath: /var/lib/redis/dump.rdb
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: wanderlust
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
