kubernetes/istio_gateway_backend.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: backend-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-backend
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: apiwander-credential
    hosts:
    - apiwander.needoo.in
