kubernetes/istio_gateway_frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: wander-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-wander
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: wander-credential
    hosts:
    - wander.needoo.in
