kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wanderlust-ingress
  namespace: wanderlust
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "internal-ca-issuer"
    external-dns.alpha.kubernetes.io/hostname: "wander-test.wakeb.tech"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wander-test.wakeb.tech
      secretName: wand-tls
  rules:
    - host: wander-test.wakeb.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
